z-index fixing

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -10,7 +10,7 @@
     color           : $white;
     background-color: $red;
     cursor          : pointer;
-    z-index         : 2;
+    z-index         : 10;
     transition      : left .3s ease;
 
     &:hover {
