--- a/assets/css/_product-preview-container.scss
+++ b/assets/css/_product-preview-container.scss
@@ -4,7 +4,7 @@
     left            : 0;
     min-height      : 100vh;
     width           : 100%;
-    z-index         : 1200;
+    z-index         : 3;
     background-color: rgba(0, 0, 0, .8);
     display         : none;
 
