--- a/assets/css/_products.scss
+++ b/assets/css/_products.scss
@@ -1,5 +1,7 @@
 .products {
 
+    margin-bottom: 1rem;
+
     .slide {
         text-align: center;
 
