--- a/assets/css/_responsiveness.scss
+++ b/assets/css/_responsiveness.scss
@@ -5,6 +5,15 @@
 
     header.active {
         box-shadow: 0 0 0 100vw rgba(0, 0, 0, .8);
+        z-index: 3;
+    }
+
+    .products {
+        z-index: 1;
+    }
+
+    .product-preview-container {
+        z-index: 2;
     }
 }
 
@@ -17,6 +26,7 @@
     section {
         padding: 3rem 2rem;
     }
+
 }
 
 @media screen and (max-width: 550px) {
@@ -28,7 +38,7 @@
         font-size: 3rem;
     }
 
-    .products .slide img{
+    .products .slide img {
         height: 25rem;
     }
 }
