--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ section {
   color: #FFF;
   background-color: #ed2d34;
   cursor: pointer;
-  z-index: 2;
+  z-index: 10;
   transition: left .3s ease; }
   #menu-btn:hover {
     background-color: #FFF;
@@ -144,25 +144,27 @@ section {
     border-color: #ed2d34;
     color: #FFF; }
 
-.products .slide {
-  text-align: center; }
-  .products .slide img {
-    height: 25rem;
-    margin: 5rem 0;
-    transform: scale(0.5); }
-  .products .slide h3 {
-    padding: 1rem 0;
-    font-size: 2.5rem;
-    color: #444;
-    text-transform: capitalize;
-    opacity: 0; }
-  .products .slide .btn {
-    opacity: 0; }
-.products .swiper-slide-active img {
-  transform: scale(1); }
-.products .swiper-slide-active h3,
-.products .swiper-slide-active .btn {
-  opacity: 1; }
+.products {
+  margin-bottom: 1rem; }
+  .products .slide {
+    text-align: center; }
+    .products .slide img {
+      height: 25rem;
+      margin: 5rem 0;
+      transform: scale(0.5); }
+    .products .slide h3 {
+      padding: 1rem 0;
+      font-size: 2.5rem;
+      color: #444;
+      text-transform: capitalize;
+      opacity: 0; }
+    .products .slide .btn {
+      opacity: 0; }
+  .products .swiper-slide-active img {
+    transform: scale(1); }
+  .products .swiper-slide-active h3,
+  .products .swiper-slide-active .btn {
+    opacity: 1; }
 
 .heading {
   text-align: center;
@@ -179,7 +181,7 @@ section {
   left: 0;
   min-height: 100vh;
   width: 100%;
-  z-index: 1200;
+  z-index: 3;
   background-color: rgba(0, 0, 0, 0.8);
   display: none; }
   .product-preview-container .product-preview {
@@ -230,7 +232,14 @@ section {
     padding-left: 0; }
 
   header.active {
-    box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8); } }
+    box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
+    z-index: 3; }
+
+  .products {
+    z-index: 1; }
+
+  .product-preview-container {
+    z-index: 2; } }
 @media screen and (max-width: 991px) {
   html {
     font-size: 55%; }
